--- a/arch/arm/mach-rockchip/Kconfig
+++ b/arch/arm/mach-rockchip/Kconfig
@@ -71,7 +71,9 @@ config MACH_DIASOM_DS_RK3568_EVB
 	bool "Diasom DS-RK3568-EVB"
 	depends on $(success,test -e $(srctree)/arch/arm/boards/diasom-rk3568-evb/sdram-init.bin)
 	select ARCH_RK3568
+	select AIODEV
 	select DEFAULT_ENVIRONMENT
+	select MACHINE_ID
 	help
 	  Say Y here if you are using a Diasom DS-RK3568-EVB board
 
