--- a/arch/arm/dts/rk3568-diasom-smarc.dts
+++ b/arch/arm/dts/rk3568-diasom-smarc.dts
@@ -60,6 +60,34 @@
 	};
 };
 
+&uart3 {
+	pinctrl-0 = <&uart3m1_xfer>;
+	/* Should be added in 6.10+ */
+	dma-names = "tx", "rx";
+	status = "okay";
+};
+
+//&uart5 {
+//	pinctrl-0 = <&uart5m0_xfer &uart5m0_ctsn &uart5m0_rtsn>;
+//	/* Should be added in 6.10+ */
+//	dma-names = "tx", "rx";
+//	status = "okay";
+//};
+
+//&uart6 {
+//	pinctrl-0 = <&uart6m1_xfer>;
+//	/* Should be added in 6.10+ */
+//	dma-names = "tx", "rx";
+//	status = "okay";
+//};
+
+&uart7 {
+	pinctrl-0 = <&uart7m1_xfer>;
+	/* Should be added in 6.10+ */
+	dma-names = "tx", "rx";
+	status = "okay";
+};
+
 &pinctrl {
 	net {
 		gmac0_rst_pins: gmac0-rst-pins {
