--- a/arch/arm/dts/rk3568-diasom-sodimm.dts
+++ b/arch/arm/dts/rk3568-diasom-sodimm.dts
@@ -8,6 +8,11 @@
 / {
 	model = "Diasom DS-RK3568-SODIMM";
 	compatible = "diasom,ds-rk3568-sodimm", "diasom,ds-rk3568-som", "rockchip,rk3568";
+
+	aliases {
+		ethernet0 = &gmac0;
+		ethernet1 = &gmac1;
+	};
 };
 
 &gmac0 {
