rk3568: Move vdda0v9_image & vdda1v8_image hack out of raw SOM

--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -757,6 +757,22 @@
 	phy-supply = <&vcc5v0_usb3_host1>;
 };
 
+&vdda0v9_image {
+	/* Temporary hack regulator-always-on and regulator-boot-on
+	   properties until we have regulator handling for dsi & lvds nodes
+	*/
+	regulator-always-on;
+	regulator-boot-on;
+};
+
+&vcca1v8_image {
+	/* Temporary hack regulator-always-on and regulator-boot-on
+	   properties until we have regulator handling for dsi & lvds nodes
+	*/
+	regulator-always-on;
+	regulator-boot-on;
+};
+
 &pinctrl {
 	pinctrl-0 = <&board_pins>;
 	pinctrl-names = "default";
