--- a/arch/arm/dts/rk3568-diasom-sodimm.dts
+++ b/arch/arm/dts/rk3568-diasom-sodimm.dts
@@ -105,6 +105,22 @@
 	status = "okay";
 };
 
+&vdda0v9_image {
+	/* Temporary hack regulator-always-on and regulator-boot-on
+	   properties until we have regulator handling for dsi & lvds nodes
+	*/
+	regulator-always-on;
+	regulator-boot-on;
+};
+
+&vcca1v8_image {
+	/* Temporary hack regulator-always-on and regulator-boot-on
+	   properties until we have regulator handling for dsi & lvds nodes
+	*/
+	regulator-always-on;
+	regulator-boot-on;
+};
+
 &pinctrl {
 	net {
 		gmac0_rst_pins: gmac0-rst-pins {
