rk3568: Fix USB OTG in raw SOM mode

--- a/arch/arm/dts/rk3568-diasom-som.dtsi
+++ b/arch/arm/dts/rk3568-diasom-som.dtsi
@@ -459,6 +459,12 @@
 	status = "okay";
 };
 
+&usb_host0_xhci {
+	hnp-disable;
+	srp-disable;
+	status = "okay";
+};
+
 &usb2phy0 {
 	status = "okay";
 };
