--- a/arch/arm/dts/rk3568-diasom-sodimm.dts
+++ b/arch/arm/dts/rk3568-diasom-sodimm.dts
@@ -15,6 +15,10 @@
 	};
 };
 
+&display_subsystem {
+	status = "okay";
+};
+
 &gmac0 {
 	assigned-clocks = <&cru SCLK_GMAC0_RX_TX>, <&cru SCLK_GMAC0>;
 	assigned-clock-parents = <&cru SCLK_GMAC0_RGMII_SPEED>;
@@ -77,6 +81,10 @@
 	status = "okay";
 };
 
+&rga {
+	status = "okay";
+};
+
 &uart3 {
 	pinctrl-0 = <&uart3m1_xfer>;
 	/* Should be added in 6.10+ */
@@ -119,6 +127,22 @@
 	*/
 	regulator-always-on;
 	regulator-boot-on;
+};
+
+&vpu {
+	status = "okay";
+};
+
+&vdpu_mmu {
+	status = "okay";
+};
+
+&vepu {
+	status = "okay";
+};
+
+&vepu_mmu {
+	status = "okay";
 };
 
 &pinctrl {
