--- a/images/Makefile.rockchip
+++ b/images/Makefile.rockchip
@@ -30,6 +30,7 @@ FILE_barebox-rk3288-phycore-som.img = start_rk3288_phycore_som.pblb
 image-$(CONFIG_MACH_PHYTEC_SOM_RK3288) += barebox-rk3288-phycore-som.img
 
 $(call build_rockchip_image, CONFIG_MACH_DIASOM_DS_RK3568_EVB, start_rk3568_diasom, diasom-rk3568-evb/sdram-init.bin, diasom-rk3568-evb)
+$(call build_rockchip_image, CONFIG_MACH_SAUT_DS_RK3568_SIB, start_rk3568_saut, saut-rk3568-sib/sdram-init.bin, saut-rk3568-sib)
 $(call build_rockchip_image, CONFIG_MACH_RK3568_EVB, start_rk3568_evb, rockchip-rk3568-evb/sdram-init.bin, rk3568-evb)
 $(call build_rockchip_image, CONFIG_MACH_RK3568_BPI_R2PRO, start_rk3568_bpi_r2pro, rockchip-rk3568-bpi-r2pro/sdram-init.bin, rk3568-bpi-r2pro)
 $(call build_rockchip_image, CONFIG_MACH_PINE64_QUARTZ64, start_quartz64a, pine64-quartz64/sdram-init.bin, quartz64a)
