Added a DeviceTree for Som module

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -18,6 +18,8 @@ lwl-$(CONFIG_MACH_DIASOM_DS_RK3568_EVB) += rk3568-diasom-sodimm.dtb.o
 lwl-$(CONFIG_MACH_DIASOM_DS_RK3568_EVB) += rk3568-diasom-som.dtb.o
 obj-$(CONFIG_MACH_DIASOM_DS_RK3568_EVB) += rk3568-diasom-som-ver2.dtbo.o
 lwl-$(CONFIG_MACH_SAUT_DS_RK3568_SIB) += rk3568-saut-sib.dtb.o
+lwl-$(CONFIG_MACH_SAUT_DS_RK3568_SIB) += rk3568-diasom-som.dtb.o
+obj-$(CONFIG_MACH_SAUT_DS_RK3568_SIB) += rk3568-diasom-som-ver2.dtbo.o
 lwl-$(CONFIG_MACH_DUCKBILL) += imx28-duckbill.dtb.o
 lwl-$(CONFIG_MACH_KINDLE_MX50) += imx50-kindle-d01100.dtb.o imx50-kindle-d01200.dtb.o imx50-kindle-ey21.dtb.o
 lwl-$(CONFIG_MACH_EFIKA_MX_SMARTBOOK) += imx51-genesi-efika-sb.dtb.o
