--- a/arch/arm/dts/rk3568-saut-sib.dts
+++ b/arch/arm/dts/rk3568-saut-sib.dts
@@ -9,14 +9,14 @@
 / {
 	model = "Saut DS-RK3568-SIB-2";
 	compatible = "saut,ds-rk3568-som-sib", "diasom,ds-rk3568-som", "rockchip,rk3568";
-
+	
 	aliases {
 		can0 = &can1;
 		ethernet0 = &gmac0;
 		sound0 = &sound0;
 		mmc0 = &sdmmc0;
 	};
-
+	
 	chosen {
 		environment-sd {
 			compatible = "barebox,environment";
@@ -24,23 +24,39 @@
 			status = "disabled";
 		};
 	};
-
+	
+	backlight1: backlight-1 {
+		compatible = "pwm-backlight";
+		pwms = <&pwm5 0 25000 0>;
+		brightness-levels = <0 255>;
+		num-interpolated-steps = <256>;
+		default-brightness-level = <255>;
+	};
+	
+	backlight2: backlight-2 {
+		compatible = "pwm-backlight";
+		pwms = <&pwm2 0 25000 0>;
+		brightness-levels = <0 255>;
+		num-interpolated-steps = <256>;
+		default-brightness-level = <255>;
+	};
+	
 	sound0: es8388-sound {
 		compatible = "simple-audio-card";
 		simple-audio-card,name = "ES8388";
 		simple-audio-card,format = "i2s";
 		simple-audio-card,bitclock-master = <&es8388_master>;
 		simple-audio-card,frame-master = <&es8388_master>;
-
+		
 		es8388_master: simple-audio-card,cpu {
 			sound-dai = <&i2s1_8ch>;
 		};
-
+		
 		es8388_codec: simple-audio-card,codec {
 			sound-dai = <&es8388>;
 		};
 	};
-
+	
 	vcc1v8_sys: vcc1v8-sys-regulator {
 		compatible = "regulator-fixed";
 		regulator-name = "1v8_sys";
@@ -69,10 +85,16 @@
 	status = "okay";
 };
 
+&i2c2 {
+	pinctrl-0 = <&i2c2m1_xfer>;
+	clock-frequency = <400000>;
+	status = "okay";
+};
+
 &i2c4 {
 	clock-frequency = <400000>;
 	status = "okay";
-
+	
 	es8388: codec@10 {
 		compatible = "everest,es8388";
 		assigned-clocks = <&cru I2S1_MCLKOUT_TX>;
@@ -84,9 +106,18 @@
 		AVDD-supply = <&vcc3v3_sys>;
 		PVDD-supply = <&vcc3v3_sys>;
 		HPVDD-supply = <&vcc3v3_sys>;
-
+		
 		#sound-dai-cells = <0>;
 	};
+};
+
+&pwm5 {
+	status = "okay";
+};
+
+&pwm2 {
+	pinctrl-0 = <&pwm2m1_pins>;
+	status = "okay";
 };
 
 &i2s1_8ch {
@@ -127,21 +158,32 @@
 };
 
 &pinctrl {
+	pinctrl-0 = <&board_pins>;
 	pinctrl-names = "default";
-
+	
+	board {
+		board_pins: board-pins {
+			rockchip,pins =
+				/* X4 - Multi */
+				<0 RK_PD4 RK_FUNC_GPIO &pcfg_pull_up>,		/* GPIO_1 		*/
+				<0 RK_PA0 RK_FUNC_GPIO &pcfg_pull_up>,		/* GPIO_2 		*/
+				<0 RK_PC5 RK_FUNC_GPIO &pcfg_pull_up>;		/* GPIO_3 		*/
+		};
+	};
+	
 	i2s {
 		i2s1_pins: i2s1-pins {
 			rockchip,pins =
-				<3 RK_PC6 4 &pcfg_pull_none_smt>,			/* I2S1_MCLK */
+				<3 RK_PC6 4 &pcfg_pull_none_smt>,			/* I2S1_MCLK 	*/
 				<3 RK_PC7 4 &pcfg_pull_none_smt>,			/* I2S1_TX_SCLK */
 				<3 RK_PD0 4 &pcfg_pull_none_smt>;			/* I2S1_TX_LRCK */
 		};
 	};
-
+	
 	net {
 		gmac0_rst_pins: gmac0-rst-pins {
 			rockchip,pins =
-				<2 RK_PD3 RK_FUNC_GPIO &pcfg_pull_none>;	/* GMAC0_RST */
+				<2 RK_PD3 RK_FUNC_GPIO &pcfg_pull_none>;	/* GMAC0_RST 	*/
 		};
 	};
 };
