--- a/arch/arm/dts/rk3568-saut-sib.dts
+++ b/arch/arm/dts/rk3568-saut-sib.dts
@@ -131,6 +131,14 @@
 	status = "okay";
 };
 
+&uart3 {
+	pinctrl-0 = <&uart3m1_xfer &uart3m0_ctsn &uart3m0_rtsn>;
+	linux,rs485-enabled-at-boot-time;
+	/* In order for DE to be High when transmitting, RTS needs to be Low */
+	rs485-rts-active-low;
+	status = "okay";
+};
+
 &mdio0 {
 	rgmii_phy0: phy@0 {
 		pinctrl-names = "default";
