--- a/arch/arm/dts/rk3568-saut-sib.dts
+++ b/arch/arm/dts/rk3568-saut-sib.dts
@@ -172,10 +172,28 @@
 	board {
 		board_pins: board-pins {
 			rockchip,pins =
-				/* X4 - Multi */
+				/* X4 - Multi 												*/
 				<0 RK_PD4 RK_FUNC_GPIO &pcfg_pull_up>,		/* GPIO_1 		*/
 				<0 RK_PA0 RK_FUNC_GPIO &pcfg_pull_up>,		/* GPIO_2 		*/
-				<0 RK_PC5 RK_FUNC_GPIO &pcfg_pull_up>;		/* GPIO_3 		*/
+				<0 RK_PC5 RK_FUNC_GPIO &pcfg_pull_up>,		/* GPIO_3 		*/
+
+				/* X7 - Discrete IN 										*/
+				<1 RK_PA5 RK_FUNC_GPIO &pcfg_pull_up>,		/* D_IN_1 		*/
+				<2 RK_PD2 RK_FUNC_GPIO &pcfg_pull_up>,		/* D_IN_2		*/
+				<1 RK_PB3 RK_FUNC_GPIO &pcfg_pull_up>,		/* D_IN_3 		*/
+				// <0 RK_PC5 RK_FUNC_GPIO &pcfg_pull_up>,	/* D_IN_4 		*/
+
+				/* X8 - Discrete OUT 										*/
+				<1 RK_PB2 RK_FUNC_GPIO &pcfg_pull_up>,		/* D_OUT_1 		*/
+				<1 RK_PB1 RK_FUNC_GPIO &pcfg_pull_up>,		/* D_OUT_2		*/
+				<1 RK_PB0 RK_FUNC_GPIO &pcfg_pull_up>,		/* D_OUT_3 		*/
+				<1 RK_PA7 RK_FUNC_GPIO &pcfg_pull_up>,		/* D_OUT_4 		*/
+
+				/* LED_GREEN 												*/
+				<4 RK_PC2 RK_FUNC_GPIO &pcfg_pull_up>,		/* D_OUT_1 		*/
+
+				/* LED_RED 													*/
+				<4 RK_PC3 RK_FUNC_GPIO &pcfg_pull_up>;		/* D_OUT_2		*/
 		};
 	};
 	
