--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -220,13 +220,24 @@
 		vin-supply = <&vcc5v0_sys>;
 	};
 
-	vcc_cam: vcc-cam-regulator {
+	vcc_cam0: vcc-cam0-regulator {
 		pinctrl-names = "default";
 		pinctrl-0 = <&csi0_pwr>;
 		compatible = "regulator-fixed";
 		enable-active-high;
 		gpio = <&gpio2 RK_PD2 GPIO_ACTIVE_HIGH>;
-		regulator-name = "vcc_cam";
+		regulator-name = "vcc_cam0";
+		startup-delay-us = <250000>;
+		vin-supply = <&vcc5v0_sys>;
+	};
+
+	vcc_cam1: vcc-cam1-regulator {
+		pinctrl-names = "default";
+		pinctrl-0 = <&csi1_pwr>;
+		compatible = "regulator-fixed";
+		enable-active-high;
+		gpio = <&gpio2 RK_PD2 GPIO_ACTIVE_HIGH>;
+		regulator-name = "vcc_cam1";
 		startup-delay-us = <250000>;
 		vin-supply = <&vcc5v0_sys>;
 	};
@@ -504,9 +515,9 @@
 		reg = <0x1a>;
 		clocks = <&xin24m>;
 		power-domains = <&power RK3568_PD_VI>;
-		avdd-supply = <&vcc_cam>;
-		dvdd-supply = <&vcc_cam>;
-		ovdd-supply = <&vcc_cam>;
+		avdd-supply = <&vcc_cam0>;
+		dvdd-supply = <&vcc_cam0>;
+		ovdd-supply = <&vcc_cam0>;
 		status = "disabled";
 
 		port {
@@ -800,21 +811,25 @@
 	csi {
 		/* csi0 clkout = cif_clk */
 
-		csi0_rst: csi0-rst-pins {
-			rockchip,pins =
-				<3 RK_PB6 RK_FUNC_GPIO &pcfg_pull_up>;		/* CSI_RESET0# */
-		};
-
 		csi0_pwr: csi0-pwr-pins {
 			rockchip,pins =
 				<2 RK_PD2 RK_FUNC_GPIO &pcfg_pull_up>;		/* CSI_PWREN0 */
 		};
 
+		csi0_rst: csi0-rst-pins {
+			rockchip,pins =
+				<3 RK_PB6 RK_FUNC_GPIO &pcfg_pull_up>;		/* CSI_RESET0# */
+		};
+
 		/* csi1 clkout = refclk_pins */
 
-		csi1_pins: csi1-pins {
+		csi1_pwr: csi1-pwr-pins {
 			rockchip,pins =
-				<0 RK_PD4 RK_FUNC_GPIO &pcfg_pull_up>,		/* CSI_PWREN1 */
+				<0 RK_PD4 RK_FUNC_GPIO &pcfg_pull_up>;		/* CSI_PWREN1 */
+		};
+
+		csi1_rst: csi1-rst-pins {
+			rockchip,pins =
 				<1 RK_PB3 RK_FUNC_GPIO &pcfg_pull_up>;		/* CSI_RESET1# */
 		};
 	};
