--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -13,6 +13,7 @@ lwl-$(CONFIG_MACH_CM_FX6) += imx6dl-cm-fx6.dtb.o imx6q-cm-fx6.dtb.o imx6q-utilit
 lwl-$(CONFIG_MACH_DFI_FS700_M60) += imx6q-dfi-fs700-m60-6q.dtb.o imx6dl-dfi-fs700-m60-6s.dtb.o
 lwl-$(CONFIG_MACH_DIASOM_DS_IMX8M_EVB) += imx8mm-diasom-evb.dtb.o
 lwl-$(CONFIG_MACH_DIASOM_DS_RK3568_EVB) += rk3568-diasom-evb.dtb.o
+obj-$(CONFIG_MACH_DIASOM_DS_RK3568_EVB) += rk3568-diasom-evb-ver3.dtbo.o
 lwl-$(CONFIG_MACH_DIASOM_DS_RK3568_EVB) += rk3568-diasom-smarc.dtb.o
 lwl-$(CONFIG_MACH_DIASOM_DS_RK3568_EVB) += rk3568-diasom-sodimm.dtb.o
 lwl-$(CONFIG_MACH_DIASOM_DS_RK3568_EVB) += rk3568-diasom-som.dtb.o
