rk3568: IMX335 now properly handled with EVB version 3

--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -16,6 +16,7 @@
 	aliases {
 		camera0 = &xc7160;
 		camera1 = &imx335_i2c4;
+		camera2 = &imx335_i2c7;
 		can0 = &can1;
 		can1 = &can2;
 		ethernet0 = &gmac0;
@@ -293,6 +294,12 @@
 				remote-endpoint = <&imx335_i2c4_out>;
 				data-lanes = <1 2 3 4>;
 			};
+
+			imx335_i2c7_in: endpoint@2 {
+				reg = <2>;
+				remote-endpoint = <&imx335_i2c7_out>;
+				data-lanes = <1 2>;
+			};
 		};
 
 		port@1 {
@@ -569,11 +576,30 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 		};
-		
+
 		i2c7: i2c@1 {
 			reg = <1>;
 			#address-cells = <1>;
 			#size-cells = <0>;
+
+			imx335_i2c7: camera@1a {
+				compatible = "sony,imx335";
+				reg = <0x1a>;
+				clocks = <&xin24m>;
+				power-domains = <&power RK3568_PD_VI>;
+				avdd-supply = <&vcc_cam0>;
+				dvdd-supply = <&vcc_cam0>;
+				ovdd-supply = <&vcc_cam0>;
+				status = "disabled";
+
+				port {
+					imx335_i2c7_out: endpoint {
+						data-lanes = <1 2>;
+						remote-endpoint = <&imx335_i2c7_in>;
+						link-frequencies = /bits/ 64 <594000000>;
+					};
+				};
+			};
 		};
 
 		i2c8: i2c@2 {
@@ -581,7 +607,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 		};
-		
+
 		i2c9: i2c@3 {
 			reg = <3>;
 			#address-cells = <1>;
