--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -229,6 +229,7 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&csi0_pwr>;
 		compatible = "regulator-fixed";
+		regulator-boot-on;
 		enable-active-high;
 		gpio = <&gpio2 RK_PD2 GPIO_ACTIVE_HIGH>;
 		regulator-name = "vcc_cam0";
@@ -240,6 +241,7 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&csi1_pwr>;
 		compatible = "regulator-fixed";
+		regulator-boot-on;
 		enable-active-high;
 		gpio = <&gpio0 RK_PD4 GPIO_ACTIVE_HIGH>;
 		regulator-name = "vcc_cam1";
